grammar.js
    program: $ => seq(
      repeat($._statement),
      optional(seq(
        choice(
          $.directive,
          $.instruction,
          $.call_statement,
          $._label,
        ),
      )),
      optional($._line_comment),
    ),

    _statement: $ => prec(1, choice(
      ';',
      '\r',
      '\n',
      choice(
        seq($.directive, choice(
          ';',
          seq(optional($._line_comment), choice($._statement_separator_no_comment, $._statement_separator_with_comment_node)),
        )),
        seq(choice($.instruction, $.call_statement), choice(
          ';',
          seq(optional($._line_comment), choice($._statement_separator_no_comment, $._statement_separator_with_comment_node)),
        )),
      ),
      seq($._line_comment, /\r?\n/),
      $._label,

      // Allow invalid primitives for better parsing and feedback
      prec(-10, choice(
        $.string,
        $.char,
        $.octal,
        $.binary,
        $.decimal,
        $.hexadecimal,
        $.float,
        $.register,
      )),
    )),

    _whitespace: $ => /[ \t]+/,

    _line_comment: $ => alias(token(seq(
      choice('#', '//'),
      /(?:[^\\\n]|\\\r?\n|\\.)*/,
    )), $.comment),

    _block_comment: $ => alias(token.immediate(seq(
      '/*',
      /(?:[^*]|\*[^/])*/,
      optional('*'),
      '*/',
    )), $.comment),

    _multiline_operand_separator_with_comment_node: $ => alias($._multiline_operand_separator_with_comment, $.comment),

    directive: $ => seq(choice(
      $._macro_directive,
      $._directive,
    )),

    // This allows macro without name, which would be semantically invalid.
    // LSPs should check that there is a name.
    _macro_directive: $ => seq(
      field('mnemonic', $.macro_mnemonic),
      optional(seq(
        choice(/[ \t]+/, $._block_comment),
        field('name', $.macro_name),
        optional(choice(
          seq(optional($._whitespace), '(', optional(field('parameters', $.macro_parameters)), ')'),
          seq($._whitespace, optional(field('parameters', $.macro_parameters))),
        )),
      )),
    ),
    _directive: $ => choice(
      seq(
        field('mnemonic', $._directive_mnemonic),
        optional(choice(
          seq(
            choice($._whitespace, $._block_comment),
            field('operands', $.directive_operands),
          ),
          $._whitespace,
          $._block_comment,
        )),
      ),
      field('mnemonic', $._directive_mnemonic),
    ),

    control_mnemonic: $ => prec(-1, /\.[a-z0-9_]+/),

    instruction: $ => seq(
      field('mnemonic', choice($.instruction_mnemonic, $.macro_variable)),
      optional(choice(
        seq(
          choice($._whitespace, $._block_comment),
          optional(field('operands', $.operands)),
        ),
      )),
    ),
    instruction_mnemonic: $ => token(/[a-zA-Z_][a-zA-Z0-9_.]*/),
    operands: $ => seq(
      $._expression,
      repeat(seq(
        choice(
          ',',
          $._operand_separator,
          $._multiline_operand_separator_with_comment_node,
        ),
        $._expression,
      )),
      optional($._operand_separator),
    ),

    // Any type of parenthesized expression
    // - relocation expressions: `foo %hi(bar)`
    // - parenthesized math expressions: `foo (1 + 2)`
    // - addresses without offest: `foo ($t0)`
    // - addresses with offest: `foo offset($t0)`
    // - addresses with offest expression: `foo offset+4($t0)`
    // - macro calls as operand: `foo bar($t0, 1, 2)`
    parenthesized_expression: $ => prec(20, seq(
      optional(field('head', $._expression)),
      '(',
      optional($._block_comment),
      optional(field('arguments', $.operands)),
      ')',
    )),

    call_statement: $ => seq(
      field('name', choice(
        $.symbol,
        $.macro_variable,
        alias($.instruction_mnemonic, $.symbol),
      )),
      '(',
      optional($._block_comment),
      optional(field('operands', $.operands)),
      ')',
    ),

    // Matches primitives, registers, macro variables and compound expressions.
    //
    // Nested expression evaluation order.
    // Operands of higher precedence binary expressions cannot be
    // expressions of lower precedence.
    // Primitives, addresses and single argument expression types
    // are at the bottom of the chain.
    //
    // Examples: `1`, `%var + 3`, `(label + 7)`
    _expression: $ => $._wrapped_assignment_expression,

    bitwise_or_operator: $ => token('|'),
    bitwise_and_operator: $ => token('&'),
    shift_operator: $ => token(choice('<<', '>>')),
    additive_operator: $ => token(choice('+', '-')),
    multiplicative_operator: $ => choice(token('*'), alias($._modulo_operator, '%'), token('/')),
    _modulo_operator: $ => '%',
    unary_expression: $ => seq(
      field('operator', choice(
        $.unary_minus_operator,
        $.bitwise_not_operator,
        $.logical_not_operator,
      )),
      field('argument', $._expression),
    ),
    octal: $ => /-?0o?[0-7]*/,
    decimal: $ => prec(-1, /-?\d+/),
    hexadecimal: $ => /-?0[xX][0-9a-fA-F]+/,
    float: $ => token(choice(
      seq(
        choice(/-?\d+\.\d*/, /-?\d*\.\d+/),
        optional(/[eE][+-]?\d+/),
        optional(choice('f', 'd')),
      ),
      /-?\d+[eE][+-]?\d+f?/,
    )),

    char: $ => seq('\'', choice(/\\./, /[^'\\]/), '\''),
    register: $ => token(seq(
      optional('$'),
      choice(
        // MIPS
        'zero', 'at', 'gp', 'sp', 'fp', 'ra',
        /[vV][0-1]/, // v0–v1
        /[kK][0-1]/, // k0–k1
        /[cC][0-3]/, // c0–c3

        // RISC V
        'tp',
        /f[ts](?:[0-9]|1[01])/, // ft0–ft11 and fs0–fs11
        /fa[0-7]/, // fa0–fa7

        // Both
        /[aA][0-7]/, // a0–a7, MIPS32 only has ..a3
        /[sS](?:[0-9]|1[01])/, // s0–s11,  MIPS only has ..s8
        /[tT][0-9]/, // t0-t9, RISC-V only has ..t6
        /[frxFRX]?(?:[0-9]|[12][0-9]|30|31)/,
      ),
    )),

    // Macro variables:
    // - start with percent, dollar or backslash.
    // - may include \() marking the end of the macro identifier.
    _label: $ => seq(
      choice($.macro_label, $.global_label, $.local_label, $.global_numeric_label, $.local_numeric_label),
      optional($._whitespace),
    ),

    // Example: `\foo:`, `\foo\()_bar:`, `\foo :`
    symbol: $ => prec(-1, /[a-zA-Z_.][a-zA-Z0-9_.$@]*/),

    // Example: `123:`, `123 :`
    // Referenced by number literal
