test/corpus/instructions/address.test
==========
[instructions/address] address without offset
==========
foo ($s0)
---

(program
  (instruction
    mnemonic: (instruction_mnemonic)
    operands: (instruction_operands
      operand: (parenthesized_expr
        arguments: (instruction_operands
          operand: (register))))))

==========
[instructions/address] address with decimal offset
==========
foo -100($s0)
---

(program
  (instruction
    mnemonic: (instruction_mnemonic)
    operands: (instruction_operands
      operand: (parenthesized_expr
        head: (decimal)
        arguments: (instruction_operands
          operand: (register))))))

==========
[instructions/address] address with label
==========
foo bar($s0)
---

(program
  (instruction
    mnemonic: (instruction_mnemonic)
    operands: (instruction_operands
      operand: (parenthesized_expr
        head: (symbol)
        arguments: (instruction_operands
          operand: (register))))))

==========
[instructions/address] address with simple expression offset
==========
foo bar+100($s0)
---

(program
  (instruction
    mnemonic: (instruction_mnemonic)
    operands: (instruction_operands
      operand: (parenthesized_expr
        head: (binary_expression
          left: (symbol)
          operator: (additive_operator)
          right: (decimal))
        arguments: (instruction_operands
          operand: (register))))))

==========
[instructions/address] address with parenthesized expression offset
==========
foo (bar+0x123)($s0)
---

(program
  (instruction
    mnemonic: (instruction_mnemonic)
    operands: (instruction_operands
      operand: (parenthesized_expr
        head: (parenthesized_expr
          arguments: (instruction_operands
            operand: (binary_expression
              left: (symbol)
              operator: (additive_operator)
              right: (hexadecimal))))
        arguments: (instruction_operands
          operand: (register))))))
