test/corpus/instructions/fields.test
==========
[instructions/fields] basic instruction
==========
syscall
---
(program
  (instruction
    opcode: (opcode)))

==========
[instructions/fields] instruction with register address
==========
la $t0, ($s0)
---
(program
  (instruction
    opcode: (opcode)
    operands: (operands
      (register)
      (address
        base: (register)))))

==========
[instructions/fields] instruction with decimal offset address
==========
la $t0, -100($s0)
---
(program
  (instruction
    opcode: (opcode)
    operands: (operands
      (register)
      (address
        offset: (decimal)
        base: (register)))))

==========
[instructions/fields] instruction with label offset address
==========
la $t0, test($s0)
---
(program
  (instruction
    opcode: (opcode)
    operands: (operands
      (register)
      (address
        offset: (symbol)
        base: (register)))))

==========
[instructions/fields] instruction with label and decimal offset address
==========
la $t0, test+100($s0)
---
(program
  (instruction
    opcode: (opcode)
    operands: (operands
      (register)
      (address
        offset: (binary_expression
          left: (symbol)
          right: (decimal))
        base: (register)))))

==========
[instructions/fields] parenthesized expression
==========
add $t0, (base+4), $t1
---
(program
  (instruction
    opcode: (opcode)
    operands: (operands
      (register)
      (parenthesized_expression
        argument: (binary_expression
          left: (symbol)
          right: (decimal)))
      (register))))

==========
[instructions/fields] unary expression
==========
add $t0, -base, $t1
---
(program
  (instruction
    opcode: (opcode)
    operands: (operands
      (register)
      (unary_expression
        argument: (symbol))
      (register))))
